--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -369,12 +369,11 @@ jobs:
 #            curl -F "file=@builds/${{ matrix.name }}/usr/bin/NZBreX" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}"" https://git.usenet-server.com/upload.php
 #          fi
 
-#      - name: Upload binary to PHP server
-#        run: |
-#          curl -F "file=@builds/${{ matrix.name }}/usr/bin/NZBreX" -H ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }} https://git.usenet-server.com/upload.php
-#          curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
-#          curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
-#
+      - name: "Upload binary to GaRuS (Git-actions-Runner-upload-Server)"
+        run: |
+          curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+          curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+
 #      - name: Upload Build Artifacts to github blob storage
 #        uses: actions/upload-artifact@v4
 #        with:
