--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -363,11 +363,11 @@ jobs:
 
       - name: "Upload binary to private GaRuS (Git-actions-Runner-upload-Server)"
         run: |
-          if [ -e "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" ]; then
+          if [ -e "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" ]; then
             echo "uploading: file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip"
             curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
           fi
-          if [ -e "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" ]; then
+          if [ -e "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" ]; then
             echo "uploading: file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb"
             curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
           fi
