--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -283,6 +283,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+#      - name: Clean Go module cache
+#        run: |
+#          rm -rf ~/.cache/go-build ~/go/pkg/mod
+#      - name: Restore Go modules cache
+#        # your cache restore step here
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -338,7 +344,9 @@ jobs:
             echo "provider.ygg.json not found! Build cannot continue." >&2
             exit 1
           fi
-          zip -j "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" builds/${{ matrix.name }}/usr/bin/$binary_name cleanHeaders.txt provider.sample.json provider.ygg.json
+          sha256sum builds/${{ matrix.name }}/usr/bin/$binary_name > builds/${{ matrix.name }}/usr/bin/$binary_name.sha256sum
+          sha512sum builds/${{ matrix.name }}/usr/bin/$binary_name > builds/${{ matrix.name }}/usr/bin/$binary_name.sha512sum
+          zip -j "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" builds/${{ matrix.name }}/usr/bin/$binary_name builds/${{ matrix.name }}/usr/bin/$binary_name.sha* cleanHeaders.txt provider.sample.json provider.ygg.json
           # Only make .deb packages for Linux with glibc
           matrix_libc="${{ matrix.libc }}"
           matrix_distro="${{ matrix.distro }}"
@@ -357,20 +365,81 @@ jobs:
             dpkg-deb --root-owner-group --build builds/${{ matrix.name }} NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb
           fi
 
-#      - name: Upload artifact to PHP server
-#        run: |
-#          curl -F "file=@path/to/artifact.zip" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" https://git.usenet-server.com/upload.php
-
       - name: "Upload binary to private GaRuS (Git-actions-Runner-upload-Server)"
         run: |
-          if [ -e "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" ]; then
-            echo "uploading: file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip"
-            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
-          fi
-          if [ -e "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" ]; then
-            echo "uploading: file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb"
-            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
-          fi
+          upload_with_retry() {
+            local file="$1"
+            local max_attempts=30
+            local attempt=1
+            local delay=30
+            while [ $attempt -le $max_attempts ]; do
+              echo "Upload attempt $attempt for $file..."
+              if curl -f -F "file=@$file" \
+                   -H "X-Git-Repo: ${{ github.repository }}" \
+                   -H "X-Git-Ref: ${{ env.REF_NAME }}" \
+                   -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" \
+                   http://10.20.0.1:58080/upload.php; then
+                echo "Upload succeeded for $file"
+                return 0
+              else
+                echo "Upload failed for $file. Retrying in $delay seconds..."
+                sleep $delay
+                attempt=$(( attempt + 1 ))
+              fi
+            done
+            echo "Upload failed for $file after $max_attempts attempts."
+            return 1
+          }
+
+          set -e
+          for ext in zip deb; do
+            file="NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.${ext}"
+            if [ -e "$file" ]; then
+              for algo in 256 512; do
+                sha="sha${algo}sum"
+                $sha "$file" > "$file.$sha"
+                upload_with_retry "$file.$sha"
+              done
+              upload_with_retry "$file"
+            fi
+          done
+
+
+#          set -e
+#          for ext in zip deb; do
+#            file="NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.${ext}"
+#            if [ -e "$file" ]; then
+#              for algo in 256 512; do
+#                sha="sha${algo}sum"
+#                $sha "$file" > "$file.$sha"
+#                curl -f -F "file=@$file.$sha" \
+#                  -H "X-Git-Repo: ${{ github.repository }}" \
+#                  -H "X-Git-Ref: ${{ env.REF_NAME }}" \
+#                  -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" \
+#                  http://10.20.0.1:58080/upload.php
+#              done
+#              curl -f -F "file=@$file" \
+#                -H "X-Git-Repo: ${{ github.repository }}" \
+#                -H "X-Git-Ref: ${{ env.REF_NAME }}" \
+#                -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" \
+#                http://10.20.0.1:58080/upload.php
+#            fi
+#          done
+
+#          if [ -e "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" ]; then
+#            sha256sum "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" > "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip.sha256sum"
+#            sha512sum "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" > "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip.sha512sum"
+#            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+#            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip.sha256sum" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+#            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip.sha512sum" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+#          fi
+#          if [ -e "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" ]; then
+#            sha256sum "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" > "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb.sha256sum"
+#            sha512sum "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" > "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb.sha512sum"
+#            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+#            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb.sha256sum" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+#            curl -F "file=@NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb.sha512sum" -H "X-Git-Repo: ${{ github.repository }}" -H "X-Git-Ref: ${{ env.REF_NAME }}" -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" http://10.20.0.1:58080/upload.php
+#          fi
 
 #      - name: Upload Build Artifacts to github blob storage
 #        uses: actions/upload-artifact@v4
@@ -379,6 +448,10 @@ jobs:
 #          path: |
 #            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip
 #            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb
+#            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip.sha256sum
+#            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb.sha256sum
+#            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip.sha512sum
+#            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb.sha512sum
 #            builds/${{ matrix.name }}/archpkg/PKGBUILD
 #            builds/${{ matrix.name }}/archpkg/nzbrex-*.pkg.tar.*
 #            builds/${{ matrix.name }}/archpkg/NZBreX
@@ -403,3 +476,13 @@ jobs:
 #          files: |
 #            NZBreX_${{ env.REF_NAME }}-*.zip
 #            NZBreX_${{ env.REF_NAME }}-*.deb
+
+#      #  $GITHUB_WORKSPACE only covers the checked-out project for the current job.
+#      #  It does not include global caches or other directories outside the current job’s workspace (like ~/.cache, /tmp, or custom directories).
+
+#      - name: Clean workspace (self-hosted only)
+#        if: runner.os == 'Linux' && runner.name == 'self-hosted'
+#        run: rm -rf "$GITHUB_WORKSPACE"/*
+
+
+
