--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -301,6 +301,11 @@ jobs:
           # using the GitHub Actions dependency cache provides little to no benefit.
           # In fact, it can sometimes cause issues (like stale or conflicting cache states)
           # and may slow down your pipeline due to unnecessary cache save/restore steps.
+          # On self-hosted runners where the module cache persists between jobs,
+          # letting Go’s native cache do its job is almost always faster and more reliable.
+          # Results with 44 jobs:
+          #  Before (with Actions cache): ~8 minutes
+          #  After (cache: false): ~2m 27s
 
 #      - name: Cache Go modules
 #        uses: actions/cache@v4
