--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -100,20 +100,38 @@ release:
 hooks:
   post:
     - |
+      upload_with_retry() {
+        local file="$1"
+        local max_attempts=30
+        local attempt=1
+        local delay=30
+        while [ $attempt -le $max_attempts ]; do
+          echo "Upload attempt $attempt for $file..."
+          if curl -f -F "file=@$file" \
+               -H "X-Git-Repo: $GITHUB_REPOSITORY" \
+               -H "X-Git-Ref: $GITHUB_REF_NAME" \
+               -H "X-Auth-Token: $BUILD_TEST_UPLOAD_TOKEN" \
+               http://10.20.0.1:58080/upload.php; then
+            echo "Upload succeeded for $file"
+            return 0
+          else
+            echo "Upload failed for $file. Retrying in $delay seconds..."
+            sleep $delay
+            attempt=$(( attempt + 1 ))
+          fi
+        done
+        echo "Upload failed for $file after $max_attempts attempts."
+        return 1
+      }
+
+      set -e
       for file in dist/*.zip dist/*.deb; do
-        [ -f "$file" ] || continue
+        [ -e "$file" ] || continue
         for algo in 256 512; do
           sha="sha${algo}sum"
           $sha "$file" > "$file.$sha"
-          curl -f -F "file=@$file.$sha" \
-            -H "X-Git-Repo: $GITHUB_REPOSITORY" \
-            -H "X-Git-Ref: $GITHUB_REF_NAME" \
-            -H "X-Auth-Token: $BUILD_TEST_UPLOAD_TOKEN" \
-            http://10.20.0.1:58080/upload.php || true
+          upload_with_retry "$file.$sha"
         done
-        curl -f -F "file=@$file" \
-          -H "X-Git-Repo: $GITHUB_REPOSITORY" \
-          -H "X-Git-Ref: $GITHUB_REF_NAME" \
-          -H "X-Auth-Token: $BUILD_TEST_UPLOAD_TOKEN" \
-          http://10.20.0.1:58080/upload.php || true
+        upload_with_retry "$file"
       done
+
