--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -4,6 +4,11 @@ on:
   release:
     types: [published]
   workflow_dispatch:
+  repository_dispatch:
+  #pull_request:
+  #push:
+  #  tags:
+  #    - "*"
 
 permissions:
   contents: write
