--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -5,6 +5,11 @@ on:
     types: [published]
   workflow_dispatch:
   repository_dispatch:
+  #pull_request:
+  #push:
+  #  tags:
+  #    - "*"
+
 
 permissions:
   contents: write
@@ -280,8 +285,9 @@ jobs:
       #     sudo apt-get install -y musl-tools zip curl dpkg-dev
 
       - name: Run GoReleaser (targeted for ${{ matrix.name }})
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
+          distribution: goreleaser
+          version: "~> v2"
           args: release --clean --skip-sign
 
