--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,8 +1,7 @@
 version: 2
 
-project:
-  name: NZBreX
-  dist: dist
+project_name: NZBreX
+dist: dist
 
 
 builds:
@@ -59,9 +58,9 @@ builds:
       - CGO_ENABLED=0
 
 archives:
-  - format: zip
-    #name_template: NZBreX_{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .ID }}-{{ .ID }}{{ end }}
-    name_template: NZBreX_{{ .Version }}-{{ if eq .Os "darwin" }}macos{{ else }}{{ .Os }}{{ end }}-{{ if eq .Arch "386" }}i386{{ else if eq .Arch "arm" }}armv{{ .Arm }}{{ else }}{{ .Arch }}{{ end }}{{ if .ID }}-{{ .ID }}{{ end }}
+  - formats: zip
+    name_template: NZBreX_{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .ID }}-{{ .ID }}{{ end }}
+    #name_template: NZBreX_{{ .Version }}-{{ if eq .Os "darwin" }}macos{{ else }}{{ .Os }}{{ end }}-{{ if eq .Arch "386" }}i386{{ else if eq .Arch "arm" }}armv{{ .Arm }}{{ else }}{{ .Arch }}{{ end }}{{ if .ID }}-{{ .ID }}{{ end }}
     files:
       - NZBreX*
       - cleanHeaders.txt
@@ -86,17 +85,19 @@ nfpms:
     bindir: /usr/bin
     file_name_template: NZBreX_{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}.deb
 
-
 release:
   github:
     owner: go-while
     name: NZBreX
 
-pipelines:
-  post_upload_manual:
-    when:
-      event: manual
-    cmd: .goreleaser/post_upload_GaRuS.sh
+#
+#
+
+#pipeline:
+#  post_upload_manual:
+#    when:
+#      event: manual
+#    cmd: .goreleaser/post_upload_GaRuS.sh
 
 #  post_upload_release:
 #    when:
