--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -48,14 +48,33 @@ builds:
     env:
       - CGO_ENABLED=0
 
-  # Windows
-  - id: windows
+  # Windows 64 bit / amd64
+  - id: windows-amd64
     main: .
     goos: [windows]
-    goarch: [amd64, 386, arm64]
+    goarch: [amd64, 386]
     ldflags: ['-s -w -X main.appVersion={{.Version}}']
     env:
       - CGO_ENABLED=0
+
+  # Windows 32 bit / i386
+  - id: windows-386
+    main: .
+    goos: [windows]
+    goarch: [amd64, 386]
+    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+    env:
+      - CGO_ENABLED=0
+
+  # Windows arm64 (needs special env)
+  - id: windows-arm64
+    main: .
+    goos: [windows]
+    goarch: [arm64]
+    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+    env:
+      - CGO_ENABLED=1         # Or whatever is needed
+      - CC=arm-linux-gnueabi-gcc # For example: aarch64-w64-mingw32-gcc or arm-linux-gnueabi-gcc
 
 archives:
   - formats: zip
