--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,15 +5,44 @@ dist: dist
 
 
 builds:
-  # Linux glibc targets (Debian, Ubuntu, etc.)
+  # Linux glibc targets (Debian, Ubuntu, etc.) except arm/arm64
   - id: linux-glibc
     main: .
     goos: [linux]
-    goarch: [amd64, 386, arm, arm64]
-    goarm: [6, 7]
+    goarch: [amd64, 386]
     ldflags: ['-s -w -X main.appVersion={{.Version}}']
     env:
       - CGO_ENABLED=0
+
+  # Linux armv6 target (with correct CC)
+  - id: linux-armv6
+    main: .
+    goos: [linux]
+    goarch: [arm]
+    goarm: [6]
+    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+    env:
+      - CGO_ENABLED=1
+      - CC=arm-linux-gnueabi-gcc
+
+  # Linux armv7/arm64 if needed
+  - id: linux-armv7
+    main: .
+    goos: [linux]
+    goarch: [arm]
+    goarm: [7]
+    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+    env:
+      - CGO_ENABLED=0
+
+  - id: linux-arm64
+    main: .
+    goos: [linux]
+    goarch: [arm64]
+    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+    env:
+      - CGO_ENABLED=0
+
 
   # Linux musl (Alpine) targets
   - id: linux-musl
@@ -48,33 +77,42 @@ builds:
     env:
       - CGO_ENABLED=0
 
-  # Windows 64 bit / amd64
-  - id: windows-amd64
-    main: .
-    goos: [windows]
-    goarch: [amd64, 386]
-    ldflags: ['-s -w -X main.appVersion={{.Version}}']
-    env:
-      - CGO_ENABLED=0
+#  # Windows
+#  - id: windows
+#    main: .
+#    goos: [windows]
+#    goarch: [amd64, 386, arm64]
+#    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+#    env:
+#      - CGO_ENABLED=0
 
-  # Windows 32 bit / i386
-  - id: windows-386
-    main: .
-    goos: [windows]
-    goarch: [amd64, 386]
-    ldflags: ['-s -w -X main.appVersion={{.Version}}']
-    env:
-      - CGO_ENABLED=0
+#  # Windows 64 bit / amd64
+#  - id: windows-amd64
+#    main: .
+#    goos: [windows]
+#    goarch: [amd64, 386]
+#    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+#    env:
+#      - CGO_ENABLED=0
 
-  # Windows arm64 (needs special env)
-  - id: windows-arm64
-    main: .
-    goos: [windows]
-    goarch: [arm64]
-    ldflags: ['-s -w -X main.appVersion={{.Version}}']
-    env:
-      - CGO_ENABLED=1         # Or whatever is needed
-      - CC=arm-linux-gnueabi-gcc # For example: aarch64-w64-mingw32-gcc or arm-linux-gnueabi-gcc
+#  # Windows 32 bit / i386
+#  - id: windows-386
+#    main: .
+#    goos: [windows]
+#    goarch: [amd64, 386]
+#    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+#    env:
+#      - CGO_ENABLED=0
+
+#  # Windows arm64 (needs special env)
+#  - id: windows-arm64
+#    main: .
+#    goos: [windows]
+#    goarch: [arm64]
+#    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+#    env:
+#      - CGO_ENABLED=1         # Or whatever is needed
+#      - CC=arm-linux-gnueabi-gcc # For example: aarch64-w64-mingw32-gcc or arm-linux-gnueabi-gcc
 
 archives:
   - formats: zip
