--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,8 @@ builds:
   - id: linux-glibc
     main: .
     goos: [linux]
-    goarch: [amd64, 386]
+    goarch: [amd64]
+    #goarch: [amd64, 386]
     ldflags: ['-s -w -X main.appVersion={{.Version}}']
     env:
       - CGO_ENABLED=0
@@ -44,27 +45,27 @@ builds:
 #      - CGO_ENABLED=0
 
 
-  # Linux musl (Alpine) targets
-  - id: linux-musl
-    main: .
-    goos: [linux]
-    goarch: [amd64, 386]
-    #goarch: [amd64, 386, arm, arm64]
-    #goarm: [6, 7]
-    goarm: [7]
-    ldflags: ['-s -w -X main.appVersion={{.Version}}']
-    env:
-      - CGO_ENABLED=1
-      - CC=musl-gcc
-    binary: NZBreX
-    flags:
-      - -tags=musl
+#  # Linux musl (Alpine) targets
+#  - id: linux-musl
+#    main: .
+#    goos: [linux]
+#    goarch: [amd64]
+#    #goarch: [amd64, 386, arm, arm64]
+#    #goarm: [6, 7]
+#    goarm: [7]
+#    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+#    env:
+#      - CGO_ENABLED=1
+#      - CC=musl-gcc
+#    binary: NZBreX
+#    flags:
+#      - -tags=musl
 
   # BSD targets
   - id: bsd
     main: .
     goos: [freebsd, openbsd, netbsd]
-    goarch: [amd64, 386]
+    goarch: [amd64]
     #goarch: [amd64, 386, arm, arm64]
     #goarm: [6, 7]
     #goarm: [7]
@@ -96,19 +97,19 @@ builds:
   - id: windows-amd64
     main: .
     goos: [windows]
-    goarch: [amd64, 386]
+    goarch: [amd64]
     ldflags: ['-s -w -X main.appVersion={{.Version}}']
     env:
       - CGO_ENABLED=0
 
-  # Windows 32 bit / i386
-  - id: windows-386
-    main: .
-    goos: [windows]
-    goarch: [amd64, 386]
-    ldflags: ['-s -w -X main.appVersion={{.Version}}']
-    env:
-      - CGO_ENABLED=0
+#  # Windows 32 bit / i386
+#  - id: windows-386
+#    main: .
+#    goos: [windows]
+#    goarch: [386]
+#    ldflags: ['-s -w -X main.appVersion={{.Version}}']
+#    env:
+#      - CGO_ENABLED=0
 
 #  # Windows arm64 (needs special env)
 #  - id: windows-arm64
