--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -1,14 +1,19 @@
 name: GoReleaser Test Build
 
 on:
+  push:
+    branches:
+      # - gpt-tests-** # use ** to match any number of directories or subdirectories.
+      - gpt-tests-1748440700
+      - tests**
   release:
     types: [published]
   workflow_dispatch:
   repository_dispatch:
-  #pull_request:
-  #push:
-  #  tags:
-  #    - "*"
+  pull_request:
+  push:
+    tags:
+      - "test*"
 
 
 permissions:
