--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -1,17 +1,17 @@
 name: GoReleaser Test Build
 
 on:
-  push:
-    branches:
-      - 'gpt-tests-1748440700'
+  #push:
+  #  branches:
+  #    - 'gpt-tests-1748440700'
   release:
     types: [published]
   workflow_dispatch:
   repository_dispatch:
-  pull_request:
-  push:
-    tags:
-      - "test*"
+  #pull_request:
+  #push:
+  #  tags:
+  #    - "test*"
 
 
 permissions:
