--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,8 +9,7 @@ builds:
   - id: linux-glibc
     main: .
     goos: [linux]
-    goarch: [amd64]
-    #goarch: [amd64, 386]
+    goarch: [amd64, 386]
     ldflags: ['-s -w -X main.appVersion={{.Version}}']
     env:
       - CGO_ENABLED=0
