--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -118,7 +118,7 @@ builds:
     ldflags: ['-s -w -X main.appVersion={{.Version}}']
     env:
       - CGO_ENABLED=1         # Or whatever is needed
-#      - CC=arm-linux-gnueabi-gcc # For example: aarch64-w64-mingw32-gcc or arm-linux-gnueabi-gcc
+      - CC=arm-linux-gnueabi-gcc # For example: aarch64-w64-mingw32-gcc or arm-linux-gnueabi-gcc
 
 archives:
   - formats: zip
