--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -47,6 +47,18 @@ jobs:
       #     sudo apt-get update
       #     sudo apt-get install -y musl-tools zip curl dpkg-dev
 
+      #  set REF_NAME to "branch-name/sha::7" if not release
+      - name: "Set Ref Name Variable"
+        run: |
+          if [ "$GITHUB_EVENT_NAME" != "release" ]; then
+            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}/${GITHUB_SHA::7}"
+          else
+            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}"
+          fi
+          echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
+        #env:
+        #  GITHUB_REF_NAME: ${{ github.ref_name }}
+
       - name: Run GoReleaser (Test Build)
         uses: goreleaser/goreleaser-action@v6
         with:
