--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -47,17 +47,26 @@ jobs:
       #     sudo apt-get update
       #     sudo apt-get install -y musl-tools zip curl dpkg-dev
 
-      #  set REF_NAME to "branch-name/sha::7" if not release
+#      #  set REF_NAME to "branch-name/sha::7" if not release
+#      - name: "Set Ref Name Variable"
+#        run: |
+#          if [ "$GITHUB_EVENT_NAME" != "release" ]; then
+#            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}/${GITHUB_SHA::7}"
+#          else
+#            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}"
+#          fi
+#          echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
+#        #env:
+#        #  GITHUB_REF_NAME: ${{ github.ref_name }}
+
       - name: "Set Ref Name Variable"
         run: |
           if [ "$GITHUB_EVENT_NAME" != "release" ]; then
-            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}/${GITHUB_SHA::7}"
+            ref_name=${GITHUB_SHA::7}
           else
-            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}"
+            ref_name=${{ github.ref_name }}
           fi
           echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
-        #env:
-        #  GITHUB_REF_NAME: ${{ github.ref_name }}
 
       - name: Run GoReleaser (Test Build)
         uses: goreleaser/goreleaser-action@v6
@@ -70,7 +79,8 @@ jobs:
         run: .goreleaser/post_upload_GaRuS.sh
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF_NAME: ${{ github.ref_name }}
+          #GITHUB_REF_NAME: ${{ github.ref_name }}
+          GITHUB_REF_NAME: ${{ env.REF_NAME }}
           BUILD_TEST_UPLOAD_TOKEN: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}
 
       - name: Clean build directory
