--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -1,14 +1,19 @@
 name: Build and Publish
 
 on:
+  push:
+    branches:
+      - 'gpt-tests-1748440700'
+    tags:
+      - "test*"
   release:
     types: [published]
   workflow_dispatch:
   repository_dispatch:
-  #pull_request:
-  #push:
-  #  tags:
-  #    - "*"
+  pull_request:
+    branches:
+      #- main
+      - testing
 
 permissions:
   contents: write
