--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -67,6 +67,7 @@ jobs:
             ref_name=${{ github.ref_name }}
           fi
           echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
+          echo "GITHUB_SHA7=${GITHUB_SHA::7}" >> "$GITHUB_ENV"
 
       - name: Run GoReleaser (Test Build)
         uses: goreleaser/goreleaser-action@v6
@@ -81,6 +82,7 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           #GITHUB_REF_NAME: ${{ github.ref_name }}
           GITHUB_REF_NAME: ${{ env.REF_NAME }}
+          GITHUB_SHA7: ${{ env.GITHUB_SHA7 }}
           BUILD_TEST_UPLOAD_TOKEN: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}
 
       - name: Clean build directory
