--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -336,6 +336,7 @@ jobs:
         if: ${{ !(matrix.os == 'linux' && matrix.arch == 'amd64') }}
         run: go test ./...
 
+        # REF_NAME, GITHUB_SHA7 and COMPILER we need for GaRuS!
       - name: "Set Ref Name Variable"
         run: |
           #if [ "$GITHUB_EVENT_NAME" != "release" ]; then
@@ -343,8 +344,9 @@ jobs:
           #else
           #  ref_name=${{ github.ref_name }}
           #fi
-          echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
+          echo "REF_NAME=${{ github.ref_name }}" >> "$GITHUB_ENV"
           echo "GITHUB_SHA7=${GITHUB_SHA::7}" >> "$GITHUB_ENV"
+          echo "COMPILER=SHR" >> "$GITHUB_ENV"
 
       #  set REF_NAME to "branch-name/sha::7" if not release
       #- name: "Set Ref Name Variable"
@@ -415,6 +417,7 @@ jobs:
                    -H "X-Git-Repo: ${{ github.repository }}" \
                    -H "X-Git-Ref: ${{ env.REF_NAME }}" \
                    -H "X-Git-SHA7: ${{ env.GITHUB_SHA7 }}" \
+                   -H "X-Git-Comp: ${{ env.COMPILER }}" \
                    -H "X-Auth-Token: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}" \
                    http://10.20.0.1:58080/upload.php; then
                 echo "Upload succeeded for $file"
