--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -59,6 +59,7 @@ jobs:
 #        #env:
 #        #  GITHUB_REF_NAME: ${{ github.ref_name }}
 
+      # REF_NAME, GITHUB_SHA7 and COMPILER we need for GaRuS!
       - name: "Set Ref Name Variable"
         run: |
           #if [ "$GITHUB_EVENT_NAME" != "release" ]; then
@@ -66,8 +67,9 @@ jobs:
           #else
           #  ref_name=${{ github.ref_name }}
           #fi
-          echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
+          echo "REF_NAME=${{ github.ref_name }}" >> "$GITHUB_ENV"
           echo "GITHUB_SHA7=${GITHUB_SHA::7}" >> "$GITHUB_ENV"
+          echo "COMPILER=GOR" >> "$GITHUB_ENV"
 
       - name: Run GoReleaser (Test Build)
         uses: goreleaser/goreleaser-action@v6
