--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -47,30 +47,6 @@ jobs:
       #     sudo apt-get update
       #     sudo apt-get install -y musl-tools zip curl dpkg-dev
 
-#      #  set REF_NAME to "branch-name/sha::7" if not release
-#      - name: "Set Ref Name Variable"
-#        run: |
-#          if [ "$GITHUB_EVENT_NAME" != "release" ]; then
-#            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}/${GITHUB_SHA::7}"
-#          else
-#            ref_name="${GITHUB_REF_NAME:-${GITHUB_REF##*/}}"
-#          fi
-#          echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
-#        #env:
-#        #  GITHUB_REF_NAME: ${{ github.ref_name }}
-
-      # REF_NAME, GITHUB_SHA7 and COMPILER we need for GaRuS!
-      - name: "Set Ref Name Variable"
-        run: |
-          #if [ "$GITHUB_EVENT_NAME" != "release" ]; then
-          #  ref_name=${GITHUB_SHA::7}
-          #else
-          #  ref_name=${{ github.ref_name }}
-          #fi
-          echo "REF_NAME=${{ github.ref_name }}" >> "$GITHUB_ENV"
-          echo "GITHUB_SHA7=${GITHUB_SHA::7}" >> "$GITHUB_ENV"
-          echo "COMPILER=GOR" >> "$GITHUB_ENV"
-
       - name: Run GoReleaser (Test Build)
         uses: goreleaser/goreleaser-action@v6
         with:
@@ -82,9 +58,9 @@ jobs:
         run: .goreleaser/post_upload_GaRuS.sh
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
-          #GITHUB_REF_NAME: ${{ github.ref_name }}
-          GITHUB_REF_NAME: ${{ env.REF_NAME }}
-          GITHUB_SHA7: ${{ env.GITHUB_SHA7 }}
+          GITHUB_REF_NAME: ${{ github.ref_name }}
+          GITHUB_SHA7: ${GITHUB_SHA::7}
+          COMPILER: "GOR"
           BUILD_TEST_UPLOAD_TOKEN: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}
 
       - name: Clean build directory
